# solar_logger

./: .gitignore  Dockerfile  build.sh  config.toml  docker-compose.yml
backend/: Cargo.toml
backend/src/: config.rs  config.toml  data_retention.rs  database_sync.rs  error.rs  index.html  lib.rs  main.rs  reader.rs  web_server.rs
backend/src/meters/: constants.rs  mock_meter.rs  mod.rs  sdm72d.rs
db/: solar_db.db
frontend/: requirements.txt
frontend/src/: Home.py  app.py  config.py
frontend/src/components/: sidebar.py
frontend/src/pages/: 1_Charts.py  2_System_Info.py
frontend/src/utils/: config.py  database.py  toml_config.py  weather.py
frontend_rust/: Cargo.toml  Dioxus.toml
frontend_rust/src/: main.rs
frontend_rust/src/components/: header.rs  mod.rs  sidebar.rs
frontend_rust/src/pages/: mod.rs
frontend_rust/src/styles/: global.css
frontend_rust/src/utils/: api.rs  mod.rs  types.rs
