[package]
name = "solarmeter"
version = "0.0.0"
edition = "2021"  # Add this to use async fn in main

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serialport = "4.0"  # For Modbus RS485 RTU communication
tokio = { version = "1", features = ["full"] }
tokio-modbus = "*"