[package]
name = "solarmeter"
version = "0.0.0"
edition = "2021"  # Add this to use async fn in main

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serialport = "4.0"  # For Modbus RS485 RTU communication
#tokio = { version = "1", features = ["full"] }
#tokio-modbus = { version = "0.16", features = ["rtu"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Additional useful dependencies
#anyhow = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
#tokio-serial = "*"
#async-trait = "0.1"
rand = "0.8"  # For the mock meter's random generation