[package]
name = "solarmeter"
version = "0.0.0"
edition = "2021"

[lib]
name = "solarmeter"
path = "src/lib.rs"

[[bin]]
name = "solarmeter"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-modbus = { version = "0.16.1", features = ["rtu"] }
tokio-serial = "5.4.4"
async-trait = "0.1"
log = "0.4"
log4rs = "1.2"
warp = "0.3"
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8"  # For the mock meter's random generation
anyhow = "1.0"
half = "2.4.1"
dirs = "5.0.1"