[package]
name = "solar-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
askama = "0.12"
thiserror = "1.0"
anyhow = "1.0"
maud = { version = "0.25", features = ["axum"] }
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"